--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"main": "server.ts",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc",
-		"dev": "ts-node src/server.ts",
-		"start": "npm run build && node build/server.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
-	"dependencies": {
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.5",
-		"json-server": "^0.17.4"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "^8.4.1",
-		"@types/cors": "^2.8.17",
-		"@types/json-server": "^0.14.7",
-		"@types/node": "^20.14.2",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "dev": "ts-node src/server.ts",
+    "start": "node build/server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "json-server": "^0.17.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@types/cors": "^2.8.17",
+    "@types/json-server": "^0.14.7",
+    "@types/node": "^20.14.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
